force-app/main/default/objects/AbsenceManager__c/AbsenceManager__c.object-meta.xml
<CustomObject>
    <label>Absence Manager</label>
    <nameField>
        <label>Absence Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Absences Manager</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>