force-app/main/default/objects/AbsenceManager__c/fields/AbsenceDaysSum__c.field-meta.xml
<CustomField>
    <fullName>AbsenceDaysSum__c</fullName>
    <label>Absence Days Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>