force-app/main/default/objects/AbsenceManager__c/fields/ContinuedTrainingDays__c.field-meta.xml
<CustomField>
    <fullName>ContinuedTrainingDays__c</fullName>
    <label>Continued Training Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>