force-app/main/default/objects/AbsenceManager__c/fields/ContractHolidays__c.field-meta.xml
<CustomField>
    <fullName>ContractHolidays__c</fullName>
    <label>Contract Holidays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>