force-app/main/default/objects/AbsenceManager__c/fields/ContractualTrainingDays__c.field-meta.xml
<CustomField>
    <fullName>ContractualTrainingDays__c</fullName>
    <label>Contractual Training Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>