force-app/main/default/objects/AbsenceManager__c/fields/ExtraHolidays__c.field-meta.xml
<CustomField>
    <fullName>ExtraHolidays__c</fullName>
    <label>Extra Holidays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>