force-app/main/default/objects/AbsenceManager__c/fields/RemainingHoliday__c.field-meta.xml
<CustomField>
    <fullName>RemainingHoliday__c</fullName>
    <formula>TotalHolidays__c - UsedHoliday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Holiday</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>