force-app/main/default/objects/AbsenceManager__c/fields/SickDays__c.field-meta.xml
<CustomField>
    <fullName>SickDays__c</fullName>
    <label>Sick Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>