force-app/main/default/objects/AbsenceManager__c/fields/TotalHolidays__c.field-meta.xml
<CustomField>
    <fullName>TotalHolidays__c</fullName>
    <formula>TransferredHolidayLastYear__c + ContractHolidays__c + ExtraHolidays__c +ContractualTrainingDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Holidays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>