force-app/main/default/objects/AbsenceManager__c/fields/TransferredHolidayLastYear__c.field-meta.xml
<CustomField>
    <fullName>TransferredHolidayLastYear__c</fullName>
    <label>Transferred Holiday Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>