force-app/main/default/objects/AbsenceManager__c/fields/UsedHoliday__c.field-meta.xml
<CustomField>
    <fullName>UsedHoliday__c</fullName>
    <label>Used Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>